--- a/frontend/style.css
+++ b/frontend/style.css
@@ -2,9 +2,7 @@
   box-sizing: border-box;
 }
 body {
-  position: relative;
   width: 100%;
-  height: 100vh;
   max-width: 500px;
   min-width: 360px;
   margin: 0 auto;
@@ -100,10 +98,7 @@ input[type="radio"]:checked + label {
   padding: 16px;
 }
 .kakao__ad {
-  width: 100%;
-  position: absolute;
-  bottom: 0px;
-  left: 0px;
+  margin-top: 32px;
 }
 .loader {
   display: none;
