Design: 로딩 시 클릭 안 되도록 막음

--- a/frontend/style.css
+++ b/frontend/style.css
@@ -85,6 +85,9 @@ input[type="radio"]:checked + label {
   align-items: center;
   justify-content: center;
 }
+.submit__btn.loading {
+  pointer-events: none;
+}
 .submit__btn.loading .loader {
   display: block;
 }
