--- a/frontend/style.css
+++ b/frontend/style.css
@@ -84,6 +84,7 @@ input[type="radio"]:checked + label {
   display: flex;
   align-items: center;
   justify-content: center;
+  cursor: pointer;
 }
 .submit__btn.loading {
   pointer-events: none;
